tests/baselines/reference/exportAsNamespace_nonExistent.errors.txt
exportAsNamespace_nonExistent.ts(1,21): error TS2792: Cannot find module './nonexistent'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?


==== exportAsNamespace_nonExistent.ts (1 errors) ====
    export * as ns from './nonexistent'; // Error
                        ~~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './nonexistent'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    